--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -1,8 +1,16 @@
-name: Trading Terminal Bot
+  name: Trading Terminal Bot
 
 on:
   schedule:
-    # Rulează în fiecare dimineață la ora 05:00 UTC (07:00 ora României)
+    # 08:30 RO (06:30 UTC) - Morning Briefing & Pregatire Londra
+    - cron: '30 6 * * *'
+    # 12:30 RO (10:30 UTC) - Update la pranz (dupa datele Europene)
+    - cron: '30 10 * * *'
+    # 15:45 RO (13:45 UTC) - US Pre-Market (dupa datele din SUA de la 15:30)
+    - cron: '45 13 * * *'
+    # 21:45 RO (19:45 UTC) - US Close & FOMC (inainte de inchiderea Wall Street)
+    - cron: '45 19 * * *'
+  workflow_dispatch:
     - cron: '0 5 * * *'
   # Permite pornirea manuală a robotului oricând dorești
   workflow_dispatch:
