--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -31,7 +31,7 @@ jobs:
           SENDER_EMAIL: ${{ secrets.SENDER_EMAIL }}
           SENDER_PASSWORD: ${{ secrets.SENDER_PASSWORD }}
           RECEIVER_EMAIL: ${{ secrets.RECEIVER_EMAIL }}
-        run: python main.py
+        run: python app.py
 
       - name: Update GitHub Pages
         run: |
